pods.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: cbz-pod
  labels:
    app: cbz-app
    env: dev
  namespace: prod
spec:
  containers:
    - name: cbz-container
      image: nginx
      ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: cbz-svc
  labels:
    app: cbz-app
    env: dev
  namespace: prod
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: nginx
  
  type: NodePort
  selector:
    app: cbz-app
