rc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-svc
  labels:
    app: my-app
spec:
    ports:
      - port: 80
        targetPort: 80
        protocol: TCP
        name: http
    type: NodePort
    selector:
      app: my-app
